# spam-void

./: .gitignore  Cargo.toml  Config.toml  README.md  build.rs  example-config.toml
contrib/: spamvoid.service
contrib/db/: 0001_create_user.sql  0002_create_database.sql  0020_populate_blacklisted_words.sql  0021_populate_blacklisted_kinds.sql  0022_populate_blacklisted_pubkeys.sql
contrib/db/0.1.0/: 0002_create_database.sql
docs/: SETUP.md
src/: main.rs  settings.rs
