[package]
name = "spam_void"
version = "0.1.0"
edition = "2021"
description = "A GRPC filter for nostr-rs-relay nostr relay instances"
authors = ["0xtr <oxtrr@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/0xtrr/spam_void"
repository = "https://github.com/0xtrr/spam_void"
keywords = ["nostr", "grpc", "anti-spam"]

[dependencies]
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
config = { version = "0.13.3", features = ["toml"] }
console-subscriber = "0.1.8"
hex = "0.4.3"
prost = "0.11.8"
serde = { version = "1.0.159", features = ["derive"] }
serde_derive = "1.0.160"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "full", "tracing"] }
tokio-postgres = "0.7.8"
tonic = { version = "0.9.1", features = ["prost"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"

[build-dependencies]
tonic-build = { version = "0.9.1", features = ["prost"] }
